--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 # Core dependencies for Tag Sentinel
 
 # Web framework and async support
-pydantic>=2.0.0,<3.0.0
-aiohttp>=3.8.0,<4.0.0
-aiofiles>=22.0.0,<24.0.0
+pydantic>=2.11.7,<3.0.0
+aiohttp>=3.12.15,<4.0.0
+aiofiles>=24.1.0,<25.0.0
 
 # Playwright for browser automation (will be used in EPIC 2)
-playwright>=1.40.0,<2.0.0
+playwright>=1.55.0,<2.0.0
 
 # Optional: Bloom filter for memory-efficient deduplication
 pybloom-live>=3.0.0,<4.0.0
 
 # Development and testing
-pytest>=7.0.0
+pytest>=8.4.0
 pytest-asyncio>=0.21.0
 pytest-mock>=3.10.0
 
 # Code quality
 black>=23.0.0
 flake8>=6.0.0
-mypy>=1.0.0
+mypy>=1.17.1,<2.0.0
 
 # Documentation
 mkdocs>=1.5.0
