--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@ pydantic>=2.11.7,<3.0.0
 aiohttp>=3.12.15,<4.0.0
 aiofiles>=24.1.0,<25.0.0
 
+# Configuration and data handling
+PyYAML>=6.0.2,<7.0.0
+httpx>=0.28.1,<1.0.0
+
 # Playwright for browser automation (will be used in EPIC 2)
 playwright>=1.55.0,<2.0.0
 
