--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ aiofiles>=24.1.0,<25.0.0
 # Configuration and data handling
 PyYAML>=6.0.2,<7.0.0
 httpx>=0.28.1,<1.0.0
+psutil>=6.0.0,<7.0.0
+jsonschema>=4.0.0,<5.0.0
+email-validator>=2.0.0,<3.0.0
 
 # Playwright for browser automation (will be used in EPIC 2)
 playwright>=1.55.0,<2.0.0
