--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,13 @@ psutil>=6.0.0,<7.0.0
 jsonschema>=4.0.0,<5.0.0
 email-validator>=2.0.0,<3.0.0
 
+# Scheduling dependencies
+croniter>=1.4.0,<2.0.0
+redis>=5.0.0,<6.0.0
+
+# CLI dependencies
+click>=8.0.0,<9.0.0
+
 # Playwright for browser automation (will be used in EPIC 2)
 playwright>=1.55.0,<2.0.0
 
