--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 
 # Web framework and async support
 pydantic>=2.11.7,<3.0.0
+fastapi>=0.104.0,<1.0.0
+uvicorn>=0.24.0,<1.0.0
 aiohttp>=3.12.15,<4.0.0
 aiofiles>=24.1.0,<25.0.0
 
@@ -18,12 +20,25 @@ redis>=5.0.0,<6.0.0
 
 # CLI dependencies
 click>=8.0.0,<9.0.0
+typer>=0.9.0,<1.0.0
 
 # Playwright for browser automation (will be used in EPIC 2)
 playwright>=1.55.0,<2.0.0
 
 # Optional: Bloom filter for memory-efficient deduplication
 pybloom-live>=3.0.0,<4.0.0
+
+# Database support
+sqlalchemy>=2.0.0,<3.0.0
+alembic>=1.13.0,<2.0.0
+
+# Authentication support
+PyJWT>=2.8.0,<3.0.0
+cryptography>=42.0.0,<43.0.0
+
+# Performance optimization
+brotli>=1.1.0,<2.0.0  # Response compression
+msgpack>=1.0.0,<2.0.0  # Fast serialization (optional)
 
 # Development and testing
 pytest>=8.4.0
