Add comprehensive tests for persistence layer, retention policies, and storage backends
- Implemented unit tests for export functionality in `test_exports.py`, covering NDJSON, JSON, and CSV formats for request logs, cookies, rule failures, and tag inventory.
- Created integration tests in `test_integration.py` to validate the complete audit workflow, export processes, and retention engine functionality.
- Developed retention policy tests in `test_retention.py`, including expired run and artifact detection, cleanup operations, and retention summary generation.
- Added tests for local artifact storage in `test_storage.py`, ensuring correct storage, retrieval, deletion, and checksum calculations.
- Established configuration management tests to verify persistence settings from environment variables.

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,11 @@ pybloom-live>=3.0.0,<4.0.0
 # Database support
 sqlalchemy>=2.0.0,<3.0.0
 alembic>=1.13.0,<2.0.0
+psycopg[binary,pool]>=3.1.0,<4.0.0  # PostgreSQL driver with async support
+
+# Object storage support
+boto3>=1.34.0,<2.0.0  # AWS S3 and compatible object stores
+aiobotocore>=2.8.0,<3.0.0  # Async AWS SDK support
 
 # Authentication support
 PyJWT>=2.8.0,<3.0.0
